--- a/css/hamburger.sass
+++ b/css/hamburger.sass
@@ -131,12 +131,14 @@
           display: flex
           flex: 0 1 30%
         &_main
+          margin-top: 1em
           flex-direction: row
           background: unset
       &__link
         display: flex
         flex: 0 0 1
         width: 100%
+        min-height: 100vh
         flex-direction: column
         justify-content: center
         align-items: center
