--- a/css/responsive/max1680.sass
+++ b/css/responsive/max1680.sass
@@ -6,7 +6,10 @@
     &.slick-prev
       left: 16px
 
-  .approach_main h2
-    margin-left: 1em
-    font-size: 56px
+  .approach_main
+    h2
+      margin-left: 1em
+      font-size: 56px
+    &__img-wrapper::after
+      bottom: -140px
 
