--- a/css/responsive/max480.sass
+++ b/css/responsive/max480.sass
@@ -2,6 +2,9 @@
   body .wrapper
     padding: 0 10px
 
+  .header__nav-list__link
+    padding: 20px 10px
+
   .content__header
     margin: 24px 0 48px
 
@@ -46,7 +49,7 @@
       padding: 0
       p
         font-size: 18px
-    h1.white, .hero h1
+    h1.white, h1
       font-size: 26px
       text-align: center
 
@@ -64,6 +67,9 @@
 
   .s_approach
     display: none
+
+  body .s_approach .wrapper_right
+    max-width: 280px
 
   .s_partners
     margin-top: 30px
