--- a/css/responsive/max640.sass
+++ b/css/responsive/max640.sass
@@ -179,7 +179,7 @@
   .staff
     .title
       margin-right: unset
-      padding: 0 1em
+      padding: 0
       text-align: center
     &__text
       padding: 0
