--- a/css/hamburger.sass
+++ b/css/hamburger.sass
@@ -138,7 +138,7 @@
         display: flex
         flex: 0 0 1
         width: 100%
-        min-height: 100vh
+        min-height: auto
         flex-direction: column
         justify-content: center
         align-items: center
