--- a/css/general.sass
+++ b/css/general.sass
@@ -132,6 +132,7 @@ div, ul, li, a, button
   &_round
     width: 40px
     height: 40px
+    flex-shrink: 0
     background: $blue
     +round
     +center
