--- a/css/responsive/max1200.sass
+++ b/css/responsive/max1200.sass
@@ -112,6 +112,10 @@
       height: 72px
       font-size: 16px
 
+  .target
+    &__img_main
+      margin-left: 60px
+
   .footer
     & .wrapper
       justify-content: space-around
