--- a/css/responsive/max1680.sass
+++ b/css/responsive/max1680.sass
@@ -6,10 +6,19 @@
     &.slick-prev
       left: 16px
 
-  .approach_main
-    h2
-      margin-left: 1em
-      font-size: 56px
-    &__img-wrapper::after
-      bottom: -140px
+  .approach
+    &_main
+      h2
+        margin-left: 1em
+        font-size: 56px
+      &__img-wrapper::after
+        bottom: -140px
+    &__text-block_social
+      max-width: 50%
+    &__img_social
+      float: unset
+      padding-left: 24px
+      max-width: unset
+      width: calc(50% - 24px)
+      object-fit: contain
 
