--- a/css/responsive/max640.sass
+++ b/css/responsive/max640.sass
@@ -149,6 +149,13 @@
     &__phone
       font-size: 32px
 
+  .voronka__line__block
+    &_center
+      display: none
+    &_right
+      margin: 0.25em auto 0.5em  0
+      text-align: left
+
   .stage
     &__list
       padding: 0 1em
