--- a/css/responsive/max767.sass
+++ b/css/responsive/max767.sass
@@ -67,6 +67,10 @@
         &::before
           margin: 0 auto 0.5em
 
+  .approach__img
+    &_web, &_social
+      display: none
+
   .about__hero .hero__second-row__left
     margin-right: 0
 
@@ -116,15 +120,13 @@
     &__list_weba li
       width: 100%
 
+  .target
+    &__img_main
+      display: none
+
   .footer
     padding-bottom: 20px
     background: $lightestGray
-    //&__logo
-    //  & .logo__text
-    //    +border-radius(0)
-    //    bottom: -30px
-    //    right: unset
-    //    left: 10px
     &__column
       &:first-child
         width: 100%
