--- a/css/general.sass
+++ b/css/general.sass
@@ -178,7 +178,10 @@ div, ul, li, a, button
     border: none
     &:hover svg path
       fill: red
-
+  &_add-file
+    width: 1px
+    font-size: 0
+    visibility: hidden
 
 .slick-slide
   &:focus
